RESOLVED FIXED203779
[LFC][Verification] Forced line break display runs don't have TextContext
https://bugs.webkit.org/show_bug.cgi?id=203779
Summary [LFC][Verification] Forced line break display runs don't have TextContext
alan
Reported 2019-11-02 06:08:45 PDT
Since they are not text runs.
Attachments
Patch (1.89 KB, patch)
2019-11-02 06:16 PDT, alan
no flags
Patch (1.89 KB, patch)
2019-11-02 06:18 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-11-02 06:09:03 PDT
alan
Comment 2 2019-11-02 06:16:54 PDT
alan
Comment 3 2019-11-02 06:18:14 PDT
Antti Koivisto
Comment 4 2019-11-03 01:10:59 PST
Comment on attachment 382676 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382676&action=review > Source/WebCore/layout/Verification.cpp:127 > && areEssentiallyEqual(inlineTextBox.logicalRight(), inlineRun.logicalRight()) > && areEssentiallyEqual(inlineTextBox.logicalTop(), inlineRun.logicalTop()) > && areEssentiallyEqual(inlineTextBox.logicalBottom(), inlineRun.logicalBottom()) There is areEssentiallyEqual for LayoutRects that could be used here.
alan
Comment 5 2019-11-03 14:56:10 PST
(In reply to Antti Koivisto from comment #4) > Comment on attachment 382676 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=382676&action=review > > > Source/WebCore/layout/Verification.cpp:127 > > && areEssentiallyEqual(inlineTextBox.logicalRight(), inlineRun.logicalRight()) > > && areEssentiallyEqual(inlineTextBox.logicalTop(), inlineRun.logicalTop()) > > && areEssentiallyEqual(inlineTextBox.logicalBottom(), inlineRun.logicalBottom()) > > There is areEssentiallyEqual for LayoutRects that could be used here. This local version of areEssentiallyEqual is a bit more relaxed than a generic areEssentiallyEqual function (the epsilon covers cases when a final geometry value goes through a handful of arithmetic conversions)
WebKit Commit Bot
Comment 6 2019-11-03 15:39:08 PST
Comment on attachment 382676 [details] Patch Clearing flags on attachment: 382676 Committed r251977: <https://trac.webkit.org/changeset/251977>
WebKit Commit Bot
Comment 7 2019-11-03 15:39:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.