[LFC][Verification] Forced line break display runs don't have TextContext https://bugs.webkit.org/show_bug.cgi?id=203779 <rdar://problem/56839710>

Reviewed by Antti Koivisto.

Display::Run's optional TextContext is not available for forced line breaks (since they are not text runs).

* layout/Verification.cpp:
(WebCore::Layout::checkForMatchingTextRuns):


Canonical link: https://commits.webkit.org/217143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251977 268f45cc-cd09-0410-ab3c-d52691b4dbfc